--- a/ansible/included/apilbdeploy.yml
+++ b/ansible/included/apilbdeploy.yml
@@ -50,6 +50,11 @@
     - cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config=ca-config.json -profile=kubernetes kube-scheduler-csr.json | cfssljson -bare kube-scheduler
     - cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config=ca-config.json -hostname={{CNAME}} -profile=kubernetes kubernetes-csr.json | cfssljson -bare kubernetes
     - cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config=ca-config.json -profile=kubernetes service-account-csr.json | cfssljson -bare service-account
+#    - "kubectl config set-cluster kubernetes-the-hard-way --certificate-authority={{ userHomeFolder }}/ca.pem --embed-certs=true --server=https://{{inventory_hostname}}.kubernetes.loc"
+#    - "kubectl config set-credentials admin --client-certificate={{ userHomeFolder }}/admin.pem --client-key={{ userHomeFolder }}/admin-key.pem"
+#    - kubectl config set-context kubernetes-the-hard-way --cluster=kubernetes-the-hard-way --user=admin
+#    - kubectl config use-context kubernetes-the-hard-way
+#    - kubectl create clusterrolebinding apiserver-kubelet-admin --user=kubernetes --clusterrole=system:kubelet-api-admin
   args:
     chdir: "{{ userHomeFolder }}"
   when: copyCaAdminFiles is success
